src/test/resources/semantic/custom/reject/undefinedFunctionCall.ul
void main() {
}

int foo() {
    bar();
}

